src/objects/Clinical_Search_Inventory__c.object
<CustomObject>
    <fields>
        <fullName>Clinical_Apt_Calendar__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Clinical Apt Calendar</label>
        <referenceTo>Clinical_Apt_Calendar__c</referenceTo>
        <relationshipLabel>Clinical Search Inventory</relationshipLabel>
        <relationshipName>Clinical_Search_Inventory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Clinical_Doctor_Inventory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Clinical Doctor Inventory</label>
        <referenceTo>Clinical_Doctor_Inventory__c</referenceTo>
        <relationshipLabel>Clinical Search Inventory</relationshipLabel>
        <relationshipName>Clinical_Search_Inventory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Minutes_DR_Avail__c</fullName>
        <label>Minutes DR Avail</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minutes_after_DR__c</fullName>
        <label>Minutes after DR</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minutes_before_DR__c</fullName>
        <label>Minutes before DR</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Minutes__c</fullName>
        <formula>Minutes_after_DR__c +  Minutes_before_DR__c  +  Minutes_DR_Avail__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Minutes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>minutes_after_and_dr__c</fullName>
        <formula>Minutes_DR_Avail__c  +  Minutes_after_DR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>minutes after and dr</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>minutes_before_and_dr__c</fullName>
        <formula>Minutes_before_DR__c + Minutes_DR_Avail__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>minutes before and dr</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Clinical Search Inventory</label>
    <nameField>
        <displayFormat>CSI-{0000}</displayFormat>
        <label>Clinical Search Inventory Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Clinical Search Inventory</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>